# mesh-controller

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MEMORY_LEAK_ANALYSIS.md  MEMORY_LEAK_README.md  MEMORY_LEAK_RECOMMENDATIONS.md  README.md  config.example.yaml  osv-scanner.toml  version.sh
anyapplication/: Cargo.toml
anyapplication/src/: anyapplication.rs  anyapplication_ext.rs  lib.rs
dashboard/: dcp-mesh-controller.json
dev/: index.yaml  mesh-controller-0.0.1-dev.1.upgrade-libs.b3cd8265.tgz  mesh-controller-0.0.1-dev.16.etcd-listener.0ddb8016.tgz  mesh-controller-0.0.1-dev.27.etcd-listener.272ba42f.tgz  mesh-controller-0.0.1-dev.27.etcd-listener.871b7601.tgz  mesh-controller-0.0.1-dev.28.etcd-listener.b52eea54.tgz  mesh-controller-0.0.1-dev.29.etcd-listener.b0a7406a.tgz  mesh-controller-0.0.1-dev.30.etcd-listener.a554eb4f.tgz  mesh-controller-0.0.1-dev.31.etcd-listener.4b666d23.tgz  mesh-controller-0.0.1-dev.32.etcd-listener.738d1560.tgz  mesh-controller-0.0.1-dev.33.etcd-listener.5ec4b3c8.tgz  mesh-controller-0.0.1-dev.35.network-node.81a4b00d.tgz  mesh-controller-0.0.1-dev.36.network-node.afead3a6.tgz  mesh-controller-0.0.1-dev.44.network-node.5b9e5d48.tgz  mesh-controller-0.0.1-dev.45.network-node.300f6922.tgz  mesh-controller-0.0.1-dev.47.apply-log-store.811e935f.tgz  mesh-controller-0.0.1-dev.49.apply-log-store.be7e866e.tgz  mesh-controller-0.0.1-dev.54.apply-log-store.393ec486.tgz  mesh-controller-0.0.1-dev.57.apply-log-store.cbb2578b.tgz  mesh-controller-0.0.1-dev.58.apply-log-store.463c11f8.tgz  mesh-controller-0.0.1-dev.59.apply-log-store.9a39e175.tgz  mesh-controller-0.0.1-dev.6.etcd-listener.23a2686a.tgz  mesh-controller-0.0.1-dev.64.apply-log-store.afad22ed.tgz  mesh-controller-0.0.1-dev.74.apply-log-store.6d4416eb.tgz  mesh-controller-0.0.1-dev.77.apply-log-store.4742eed1.tgz  mesh-controller-0.0.1-dev.79.apply-log-store.d03b1d93.tgz  mesh-controller-0.0.1-dev.8.etcd-listener.7179c4ae.tgz  mesh-controller-0.0.1-dev.83.anyapplication-m.d593a038.tgz  mesh-controller-0.0.2-dev.10.refactorings.0c30c970.tgz  mesh-controller-0.0.2-dev.2.refactorings.2c6daa44.tgz  mesh-controller-0.0.2-dev.3.refactorings.9ca0c4f5.tgz  mesh-controller-0.0.2-dev.4.refactorings.d375fd0a.tgz  mesh-controller-0.0.2-dev.5.refactorings.06ff8297.tgz  mesh-controller-0.0.2-dev.7.refactorings.6c4971f9.tgz  mesh-controller-0.0.2-dev.9.refactorings.d14a2418.tgz  mesh-controller-0.1.0-dev.0.build-fix.2fd951ce.tgz  mesh-controller-0.1.0-dev.0.build-fix.cd65886e.tgz  mesh-controller-0.1.0-dev.1.integration-fixe.72c8977d.tgz  mesh-controller-0.1.0-dev.11.security-audit.7048a3fd.tgz  mesh-controller-0.1.0-dev.12.recreate-descrip.ae556843.tgz  (+132 more)
env/: kind-cluster1.yaml  kind-cluster2.yaml
fake-kube-api/: Cargo.toml
fake-kube-api/src/: request.rs  response.rs  service.rs  storage.rs  types.rs  unified_body.rs
fake-kube-api/src/handlers/: api_resource.rs  resource.rs
helm-charts/: index.yaml  mesh-controller-0.0.1-dev.2.main.3128facb.tgz  mesh-controller-0.0.1-dev.34.main.f548de3f.tgz  mesh-controller-0.0.1-dev.45.main.4197cebf.tgz  mesh-controller-0.0.1-dev.47.main.b5379c68.tgz  mesh-controller-0.0.1-dev.75.main.1d030436.tgz  mesh-controller-0.0.1-dev.80.main.b14067d1.tgz  mesh-controller-0.0.1-dev.84.main.8ac85bfe.tgz  mesh-controller-0.0.1.tgz  mesh-controller-0.0.2-dev.11.main.2e6ad943.tgz  mesh-controller-0.0.2.tgz  mesh-controller-0.1.0-dev.0.main.09ee911b.tgz  mesh-controller-0.1.0-dev.12.main.4c0f8186.tgz  mesh-controller-0.1.0-dev.2.main.459edc8d.tgz  mesh-controller-0.1.0-dev.26.main.f223fc3f.tgz  mesh-controller-0.1.0-dev.34.main.58c2af4c.tgz  mesh-controller-0.1.0-dev.4.main.d43f1853.tgz  mesh-controller-0.1.0-dev.6.main.6d46b90e.tgz  mesh-controller-0.1.0.tgz  mesh-controller-0.1.1-dev.3.main.f9e1cf74.tgz  mesh-controller-0.1.1-dev.6.main.ab2d587d.tgz  mesh-controller-0.1.1-dev.9.main.52551ed3.tgz  mesh-controller-0.1.1.tgz  mesh-controller-0.1.2-dev.19.main.e6ce5ebe.tgz  mesh-controller-0.1.2-dev.2.main.0e241826.tgz  mesh-controller-0.1.2-dev.40.main.bf1643e1.tgz  mesh-controller-0.1.2-dev.54.main.7e938813.tgz  mesh-controller-0.1.2.tgz  mesh-controller-0.1.3-dev.2.main.9e0bf3e7.tgz  mesh-controller-0.1.3-dev.27.main.e9f34738.tgz  mesh-controller-0.1.3-dev.4.main.b37d0d25.tgz  mesh-controller-0.1.3.tgz  mesh-controller-0.1.4-dev.18.main.4c510216.tgz  mesh-controller-0.1.4.tgz  (+35 more)
mesh/: Cargo.toml
mesh-kube/: Cargo.toml
mesh-kube/src/: client.rs  config.rs  event.rs  lib.rs
mesh-kube/src/kube/: dynamic_object_ext.rs  event.rs  mod.rs  subscription.rs  subscriptions.rs
mesh-resource/: Cargo.toml
mesh-resource/src/: actor.rs  crdmain.rs  lib.rs  mesh_status.rs  meshcrd.rs  meshpeer.rs  peers.rs  types.rs
mesh/src/: context.rs  context_builder.rs  lib.rs  main.rs  metrics.rs  tracing.rs
mesh/src/api/: blocking.rs  client.rs  mod.rs  server.rs  status.rs
mesh/src/client/: api_resources.rs  kube.rs  kube_client.rs  mod.rs  request.rs  resource_handler.rs  response.rs  router.rs  service.rs  storage.rs  types.rs
mesh/src/client/handlers/: api_resource.rs  mod.rs  resource.rs
mesh/src/config/: configuration.rs  mod.rs
mesh/src/http/: api.rs
mesh/src/kube/: cache.rs  dynamic_object_ext.rs  event.rs  kube_api.rs  mod.rs  pool.rs  subscription.rs  subscriptions.rs  types.rs
mesh/src/logs/: kube_api.rs  mod.rs  operations.rs  peer_discovery.rs  topic.rs
mesh/src/merge/: anyapplication.rs  anyapplication_ext.rs  anyapplication_strategy.rs  anyapplication_test_support.rs  default_strategy.rs  merger.rs  mod.rs  types.rs
mesh/src/mesh/: actor.rs  event.rs  mesh.rs  mod.rs  operation_ext.rs  operation_log.rs  operations.rs  partition.rs  topic.rs  types.rs
mesh/src/network/: actor.rs  log_sync.rs  membership.rs  message.rs  mod.rs  sync.rs  types.rs
mesh/src/network/discovery/: event.rs  membership.rs  mod.rs  nodes.rs  peers.rs  static_lookup.rs  types.rs
mesh/src/node/: actor.rs  mesh.rs  mod.rs
mesh/src/tests/: configuration.rs  fake_etcd_server.rs  fake_mesh.rs  mod.rs  state_replication.rs  utils.rs
mesh/src/utils/: clock.rs  mod.rs  types.rs
(+51 files in other folders)
