[workspace]
members = ["mesh"]
resolver = "3"

[workspace.lints.rust]

[workspace.dependencies]
async-trait = "0.1.88"
anyhow = "1.0.98"
axum = "0.8.4"
axum-prometheus = "0.8.0"
bytes = "1.10.1"
hex = "0.4.3"
clap = { version = "4.5.38", features = ["derive"] }
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", tag="v0.2.0" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", default-features = false, tag="v0.2.0" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", features = ["cbor"], default-features = false, tag="v0.2.0" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", tag="v0.2.0" }
mesh = { path = "mesh" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
futures-lite = "2.6.0"
futures-util = "0.3.31"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
url = "2.5.4"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.9.1"
loole = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.20.0"
rusty-hook = "^0.11.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project = "1.1.10"
hyper-util = { version = "0.1.11", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
schemars = { version = "0.8.12", features = ["chrono"] }
built = { version = "0.7", features = ["chrono", "git2"] }
strum = { version = "0.27.1", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
pin-project-lite = { version = "0.2.16" }
# pinned version of rusttls due to iroh-net and stackable-operator/kube-rs
rustls = { version = "0.23.27" }
chrono = { version = "0.4.41" }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["schemars", "v1_33"] }
kube = { version = "1.0.0", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls", "runtime", "derive" ] }
tower-test = { version = "0.4.0" }
http = { version = "1.3.1" }
# http-body = "1.0.1"
# http-body-util = "0.1.2"
tower-service = { version = "0.3.3" }
regex = { version = "1.11.1" }
strum_macros = { version = "0.27.1" }
