[workspace]
members = [
    "mesh",
    "mesh-kube-fake-api",
    "mesh-kube",
    "mesh-resource",
    "anyapplication",
]
resolver = "3"

[workspace.lints.rust]

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.99"
axum = "0.8.4"
axum-prometheus = "0.9.0"
bytes = "1.10.1"
hex = "0.4.3"
clap = { version = "4.5.47", features = ["derive"] }
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", tag="v0.3.1" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", default-features = false, tag="v0.3.1" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", features = ["cbor", "log-sync"], default-features = false, tag="v0.3.1" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", tag="v0.3.1" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", features=["memory"], tag="v0.3.1" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda.git", tag="v0.3.1" }
iroh-base = "0.34.1"
mesh = { path = "mesh" }
mesh-kube-fake-api = { path = "mesh-kube-fake-api" }
mesh-kube = { path = "mesh-kube" }
mesh-resource = { path = "mesh-resource" }
anyapplication = { path = "anyapplication" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
futures-lite = "2.6.1"
futures-util = "0.3.31"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
url = { version= "2.5.7" }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.9.2"
loole = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = "3.22.0"
rusty-hook = "^0.11.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project = "1.1.10"
hyper-util = { version = "0.1.16", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
schemars = { version = "0.8.22", features = ["chrono"] }
built = { version = "0.7", features = ["chrono", "git2"] }
strum = { version = "0.27.2", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
pin-project-lite = { version = "0.2.16" }
# pinned version of rusttls due to iroh-net
rustls = { version = "0.23.31" }
chrono = { version = "0.4.41" }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["schemars", "v1_33"] }
kube = { version = "1.1.0", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls", "runtime", "derive" ] }
either = { version = "1.1.0" }
tower-test = { version = "0.4.0" }
http = { version = "1.3.1" }
http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.3" }
tower-service = { version = "0.3.3" }
regex = { version = "1.11.2" }
strum_macros = { version = "0.27.2" }
maplit = { version = "1.0.2" }
# pinned version due to vulnerability
openssl = "=0.10.73"
slab = "=0.4.11"