[workspace]
members = [
    "mesh",
    "mesh-kube-fake-api",
    "mesh-kube",
    "mesh-resource",
    "anyapplication",
]
resolver = "3"
exclude = ["patch/quinn"]

[workspace.lints.rust]

[patch.crates-io]
iroh-base = { path = "patch/iroh/iroh-base" }
iroh = { path = "patch/iroh/iroh" }
iroh-gossip = { path = "patch/iroh-gossip" }
iroh-quinn = { path = "patch/quinn/quinn" }
iroh-quinn-proto = { path = "patch/quinn/quinn-proto" }
iroh-quinn-udp = { path = "patch/quinn/quinn-udp" }
iroh-metrics = { path = "patch/iroh-metrics" }

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.100"
axum = "0.8.8"
axum-prometheus = "0.10.0"
bytes = "1.11.0"
hex = "0.4.3"
clap = { version = "4.5.54", features = ["derive"] }
ciborium = "0.2.2"
p2panda-core = { path = "patch/p2panda/p2panda-core" }
p2panda-net = { path = "patch/p2panda/p2panda-net", default-features = false }
p2panda-sync = { path = "patch/p2panda/p2panda-sync", features = ["cbor", "log-sync"], default-features = false }
p2panda-discovery = { path = "patch/p2panda/p2panda-discovery" }
p2panda-store = { path = "patch/p2panda/p2panda-store", features=["memory"] }
p2panda-stream = { path = "patch/p2panda/p2panda-stream" }

# p2panda-core = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }
# p2panda-net = { git = "https://github.com/p2panda/p2panda.git", default-features = false, tag="v0.4.0" }
# p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", features = ["cbor", "log-sync"], default-features = false, tag="v0.4.0" }
# p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }
# p2panda-store = { git = "https://github.com/p2panda/p2panda.git", features=["memory"], tag="v0.4.0" }
# p2panda-stream = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }

iroh-base = { path = "patch/iroh/iroh-base" } # "0.34.1"
iroh-metrics = { path = "patch/iroh-metrics" } # 0.32
iroh = { path = "patch/iroh/iroh" } # 0.34.1
iroh-quinn = { path = "patch/quinn/quinn" }
mesh = { path = "mesh" }
mesh-kube-fake-api = { path = "mesh-kube-fake-api" }
mesh-kube = { path = "mesh-kube" }
mesh-resource = { path = "mesh-resource" }
anyapplication = { path = "anyapplication" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml_bw = "2.5.1"
futures-lite = "2.6.1"
futures-util = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
console-subscriber = { version = "0.5.0" }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
url = { version= "2.5.7" }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.9.2"
loole = "0.4.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.24.0"
rusty-hook = "^0.11.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project = "1.1.10"
hyper-util = { version = "0.1.19", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
schemars = { version = "1.2.0" }
built = { version = "0.7", features = ["chrono", "git2"] }
strum = { version = "0.27.2", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
pin-project-lite = { version = "0.2.16" }
# pinned version of rusttls due to iroh-net
rustls = { version = "0.23.35" }
chrono = { version = "0.4.42" }
k8s-openapi = { version = "0.26.1", default-features = false, features = ["schemars", "v1_33"] }
kube = { version = "2.0.1", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls", "runtime", "derive" ] }
either = { version = "1.1.0" }
tower-test = { version = "0.4.0" }
http = { version = "1.4.0" }
http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.3" }
tower-service = { version = "0.3.3" }
regex = { version = "1.12.2" }
strum_macros = { version = "0.27.2" }
maplit = { version = "1.0.2" }
# pinned version due to vulnerability
openssl = "=0.10.75"
slab = "=0.4.11"

