[package]
name = "fake-kube-api"
description = ""
version = "0.1.1"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "fake_kube_api"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
loole.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
kube.workspace = true
k8s-openapi.workspace=true
dashmap.workspace = true
serde_json.workspace = true
url.workspace = true
http.workspace = true
tower-service.workspace = true
strum_macros.workspace = true
strum.workspace = true
regex.workspace = true
http-body.workspace = true
http-body-util.workspace = true

[build-dependencies]
built.workspace = true
