[package]
name = "mesh-resource"
description = ""
version = "0.1.1"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "meshresource"

[[bin]]
name = "meshcrd"
path = "src/crdmain.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
kube.workspace = true
k8s-openapi.workspace=true
stackable-operator.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mesh-kube.workspace = true

[build-dependencies]
built.workspace = true
